--- a/pom.xml
+++ b/pom.xml
@@ -24,26 +24,51 @@
 
     <dependencies>
 
-        <!-- REST -->
+        <!-- ========================= -->
+        <!-- WEB / REST -->
+        <!-- ========================= -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- JDBC -->
+        <!-- ========================= -->
+        <!-- JPA -->
+        <!-- ========================= -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- ========================= -->
         <!-- H2 -->
+        <!-- ========================= -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Tests -->
+        <!-- ========================= -->
+        <!-- Liquibase -->
+        <!-- ========================= -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+
+        <!-- ========================= -->
+        <!-- Lombok (ОБЯЗАТЕЛЬНО) -->
+        <!-- ========================= -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- ========================= -->
+        <!-- TESTS -->
+        <!-- ========================= -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
