--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 spring.application.name=recommendation-service
-application.recommendations-db.url=jdbc:h2:file:./transaction
+
+# ===== SINGLE DATASOURCE =====
+spring.datasource.url=jdbc:h2:mem:rules-db
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# ===== JPA =====
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+# ===== Liquibase =====
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+
+# ===== H2 Console (???????????) =====
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
