--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -49,3 +49,37 @@ databaseChangeLog:
             referencedTableName: rules
             referencedColumnNames: id
             constraintName: fk_rule_conditions_rule
+
+  # ===== СТАТИСТИКА СРАБАТЫВАНИЙ ПРАВИЛ =====
+  - changeSet:
+      id: 2
+      author: neka
+      changes:
+        - createTable:
+            tableName: rule_stats
+            columns:
+              - column:
+                  name: id
+                  type: bigint
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+              - column:
+                  name: rule_id
+                  type: uuid
+                  constraints:
+                    nullable: false
+                    unique: true
+              - column:
+                  name: count
+                  type: bigint
+                  constraints:
+                    nullable: false
+
+        - addForeignKeyConstraint:
+            baseTableName: rule_stats
+            baseColumnNames: rule_id
+            referencedTableName: rules
+            referencedColumnNames: id
+            constraintName: fk_rule_stats_rule
+            onDelete: CASCADE
