--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,4 +1,8 @@
 databaseChangeLog:
+
+  # =========================
+  # 1. RULES
+  # =========================
   - changeSet:
       id: 1
       author: neka
@@ -12,10 +16,10 @@ databaseChangeLog:
                   constraints:
                     primaryKey: true
               - column:
-                  name: product_name
+                  name: product_id
                   type: varchar(255)
               - column:
-                  name: product_id
+                  name: product_name
                   type: varchar(255)
               - column:
                   name: product_text
@@ -50,7 +54,9 @@ databaseChangeLog:
             referencedColumnNames: id
             constraintName: fk_rule_conditions_rule
 
-  # ===== СТАТИСТИКА СРАБАТЫВАНИЙ ПРАВИЛ =====
+  # =========================
+  # 2. RULE STATS
+  # =========================
   - changeSet:
       id: 2
       author: neka
@@ -83,3 +89,46 @@ databaseChangeLog:
             referencedColumnNames: id
             constraintName: fk_rule_stats_rule
             onDelete: CASCADE
+
+  # =========================
+  # 3. USERS
+  # =========================
+  - changeSet:
+      id: 3
+      author: neka
+      changes:
+        - createTable:
+            tableName: users
+            columns:
+              - column:
+                  name: id
+                  type: bigint
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: true
+
+              - column:
+                  name: uuid
+                  type: uuid
+                  constraints:
+                    nullable: false
+                    unique: true
+
+              - column:
+                  name: username
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+                    unique: true
+
+              - column:
+                  name: first_name
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+
+              - column:
+                  name: last_name
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
